linked the to do pages and get all totals

--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>Landing Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="Css/Style.css">
     <script src="JavaScript/index.js"></script>
-=======
     <title>home page</title>
     <title>Document</title>
->>>>>>> c66983c246650a31b1e2a33393392a30d9cbd9c9
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -57,7 +54,8 @@
                       To Do 
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                      <li><a class="dropdown-item" href="#">Create a to do list</a></li>
+                      <li><a class="dropdown-item" href="new todo.html">Create a to do list</a></li>
+                      <li><a class="dropdown-item" href="todos.html">Get All Totals </a></li>
                       <li><a class="dropdown-item" href="#">Checked Items</a></li>
                       <li><a class="dropdown-item" href="#">Unchecked Items </a></li>
                     </ul>
