--- a/new todo.html
+++ b/new todo.html
@@ -56,6 +56,6 @@
     <script src="./services/user-service.js"></script>
     <script src="./services/todo-service.js"></script>
     <script src="./services/category-service.js"></script>
-    <script src="JavaScript/newTodo.js"></script>
+    <script src="./JavaScript/newTodo.js"></script>
 </body>
 </html>
