--- a/navtest.html
+++ b/navtest.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="home.html">
+          <a class="navbar-brand" href="index.html">
             <img src="#" alt="#" width="#">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,10 +22,13 @@
           <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="home.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="todos.html">Things I Need To Do</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="new todo.html">Things I Should Add</a>
               </li>
           </div>
           <div>
